--- a/cummings - lady i will touch you with my mind.html
+++ b/cummings - lady i will touch you with my mind.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf8">
 	<title>Lady, i will touch you with my mind. - e. e. Cummings</title>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
 	<style>
 		body {
             background-color: NavajoWhite;
@@ -19,7 +19,7 @@
             width: 28em;
             background-color:Thistle;
             padding:1em;
-            font-family: 'Raleway', sans-serif;
+            font-family: 'Maven Pro', sans-serif;
             font-size:16pt;
             border: 3px solid black;
 
