--- a/silverstein - magic.html
+++ b/silverstein - magic.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf8">
 	<title>Magic - Shel Silverstein</title>
-    <link href='http://fonts.googleapis.com/css?family=Kameron' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Slabo' rel='stylesheet' type='text/css'>
 	<style>
 		body {
             background-color: white;
@@ -14,7 +14,7 @@
             width: 22em;
             background-color:white;
             padding:1em;
-            font-family: 'Kameron', serif;
+            font-family: 'Slabo', serif;
             font-size:16pt;
             border: 3px solid black;
             }
@@ -66,7 +66,7 @@
         <section class="author"><a href="https://en.wikipedia.org/wiki/Shel_Silverstein">Shel Silverstein</a></section>
     </figure>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script type="text/javascript">
         $(function(){
         });
